lambda & stream api - added 3 functional interfaces - replaced iterations with stream api - used lambda expressions