@@ -5,7 +5,12 @@ import org.apache.commons.lang3.StringUtils;
 
 import java.io.File;
 import java.io.IOException;
+import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.nio.file.StandardCopyOption;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -13,8 +18,17 @@ public class DocumentAnalyzer {
     private static final String OUTPUT_FILE = "analysis_results.txt";
     private static final String[] SPECIAL_WORDS = {"court", "evidence", "witness", "judge", "law"};
 
-    public static void analyzeDocument(String filePath) throws IOException {
-        String content = FileUtils.readFileToString(new File(filePath), StandardCharsets.UTF_8);
+    public static void analyzeDocument(String resourcePath) throws IOException {
+        // Loading an input file from resources
+        InputStream inputStream = DocumentAnalyzer.class.getClassLoader().getResourceAsStream(resourcePath);
+        if (inputStream == null) {
+            throw new IOException("Resource not found: " + resourcePath);
+        }
+
+        // Reading file contents
+        String content = new String(inputStream.readAllBytes(), StandardCharsets.UTF_8);
+        inputStream.close();
+
         Map<String, Integer> wordCounts = new HashMap<>();
 
         // Initialize counts
@@ -31,19 +45,15 @@ public class DocumentAnalyzer {
         // Prepare result
         StringBuilder result = new StringBuilder();
         result.append("\n=== Analysis Results ===\n");
-        result.append("File: ").append(filePath).append("\n");
+        result.append("File: ").append(resourcePath).append("\n");
         result.append("Total words: ").append(StringUtils.countMatches(content, " ") + 1).append("\n");
 
         for (Map.Entry<String, Integer> entry : wordCounts.entrySet()) {
             result.append(entry.getKey()).append(": ").append(entry.getValue()).append("\n");
         }
 
-        // Append to output file
-        FileUtils.writeStringToFile(
-                new File(OUTPUT_FILE),
-                result.toString(),
-                StandardCharsets.UTF_8,
-                true  // Append mode
-        );
+        // Writing the result to a file in the resources folder
+        Path outputPath = Paths.get("src/main/resources", OUTPUT_FILE);
+        Files.write(outputPath, result.toString().getBytes(StandardCharsets.UTF_8));
     }
 }
